# structured-logger

./: .env.example  .env.test  .gitignore  ADVANCED_FEATURES.md  ENV_SETUP.md  FORMAT_VALIDATION.md  MANIFEST.in  Makefile  README.md  SENTRY_INTEGRATION.md  UVICORN_INTEGRATION.md  logger_wrapper_fix.py  pyproject.toml  requirements.txt  setup.py  test_error_field_fix.py
.github/workflows/: ci.yml  publish.yml
docs/: ADVANCED_FEATURES.md  DEFAULT_OVERRIDES_SUMMARY.md  ERROR_FIELD_FIX.md  GUNICORN_IMPLEMENTATION_SUMMARY.md  GUNICORN_INTEGRATION.md  LIBRARY_LOGGER_INTEGRATION.md  RAILWAY_LOGGING_GUIDE.md  RAILWAY_STDERR_FIX.md  SENTRY_INTEGRATION.md  UVICORN_INTEGRATION.md
examples/: advanced_features.py  basic_usage.py  custom_config.py  disable_library_logging.py  fastapi_advanced.py  fastapi_complete_logging.py  fastapi_simple.py  flask_advanced.py  flask_integration.py  gunicorn_integration.py  gunicorn_quick_start.py  railway_compatibility.py  sentry_integration_example.py  test_all_features.py  uvicorn_integration.py
src/structured_logger/: __init__.py  _version.py  advanced.py  logger.py  sentry_integration.py
structured_logger/: __init__.py  _version.py  advanced.py  logger.py  py.typed
tests/: conftest.py  simple_format_test.py  test_env_config.py  test_error_field_fix.py  test_error_field_handling.py  test_format_validation.py  test_gunicorn_integration.py  test_langchain_integration.py  test_library_logger_integration.py  test_sentry_integration.py  test_sqlalchemy_integration.py  test_stdout_output.py  test_uvicorn_integration.py
