[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "structured-logger-railway"
version = "1.2.0"
authors = [
    {name = "Nikita Yastreb", email = "yastrebnikita723@gmail.com"},
    {name = "Patrick Ward", email = "pward17@gmail.com"},
]
description = "A flexible structured JSON logger for Python applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
keywords = ["logging", "json", "structured", "railway", "cloud", "docker", "kubernetes"]
dependencies = [
    "sentry-sdk>=2.39.0",
]

[dependency-groups]
dev = [
    "uv>=0.8.22",
    "pytest>=7.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "isort>=5.13.2",
    "build>=0.8.0",
    "twine>=4.0.0",
    "python-dotenv>=1.0.0",
    "pytest-env>=1.1.0",
]
sentry = [
    "sentry-sdk>=2.39.0",
]
all = [
    "sentry-sdk>=2.39.0",
]

[project.urls]
Homepage = "https://github.com/zee229/structured-logger"
Documentation = "https://github.com/zee229/structured-logger#readme"
Repository = "https://github.com/zee229/structured-logger.git"
"Bug Tracker" = "https://github.com/zee229/structured-logger/issues"

# uv_build configuration
[tool.uv.build-backend]
module-name = "structured_logger"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src/structured_logger",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
env = [
    "TESTING = true",
    "ENVIRONMENT = test",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "sentry: Tests that require Sentry",
    "slow: Slow running tests",
]

[tool.isort]
profile = "black"
